--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <article>
         <h4>Project highlights</h4>
         <p>Featured project.</p>
+        <a href="project/project1.html">WS101 Project Making</a>
       </article>
       <article>
         <h4>Skills</h4>
