--- a/education/education.html
+++ b/education/education.html
@@ -28,8 +28,8 @@
         <a href="https://www.google.com/maps?sca_esv=97b248963fd07e50&output=search&q=duero+central+elementary+school&source=lnms&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeuyr9ljWioGWIw0oasFed3pekTy9ejcwggIWHfXrlrOSGrh2X_EMuX3vWLEhC3Rsgup_V2icg-W_zKg3K2l_FIOPRuWncJVTX82i3FksYeHtJwVhQGDI1qTkL9ekQgBbsHwKOCOjzsbCQK-AvH-8GJuCIXQuE09-7aqN-1Bw_SA2XDJUNA&entry=mc&ved=1t:200715&ictx=111" target="_blank">Duero Central Elementary School</a>
       </div>
       <div class="card">
-        <h4>Holy Name University</h4>
-        <p>B.S. Information Technology — 2024–Present</p>
+        <h4>College 2024-Present</h4>
+        <a href="https://www.google.com/maps/place/Holy+Name+University/@9.6502514,123.8656277,17z/data=!3m1!4b1!4m6!3m5!1s0x33aa4c346a515c51:0xb74ab2ca59a780d5!8m2!3d9.6502514!4d123.8682026!16s%2Fm%2F026hg96?entry=ttu&g_ep=EgoyMDI1MTExMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Holy Name University </a>
       </div>
       <div class="card">
         <h3>High School — 2017-2021</h3>
@@ -41,4 +41,5 @@
   </main>
   <footer class="site-footer"><div class="container"><p>© <span id="year3"></span> Allen</p></div></footer>
 </body>
+
 </html>
