--- a/education/education.html
+++ b/education/education.html
@@ -40,6 +40,6 @@
     </div>
   </main>
   <footer class="site-footer"><div class="container"><p>© <span id="year3"></span> Allen</p></div></footer>
+  <script></script>
 </body>
-
 </html>
