--- a/project/project2.html
+++ b/project/project2.html
@@ -10,7 +10,7 @@
   <header class="site-header"><div class="container nav-wrap"><h1 class="logo">SENATSOP</h1>
     <nav><ul class="nav"><li><a href="projects.html">Back to Projects</a></li></ul></nav></div></header>
   <main class="container">
-    <h2>Koi Fish Management System</h2>
+    <h2>Koi Farm Management System</h2>
     <p>A koi Fish Management system made of c language, final project for CSS104. This program was made to effeciently manage koi fish by using all operational arrays.</p>
     <h3>Tools</h3>
     <p>C language</p>
